--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
                             <th scope="row"><a href="https://www.creative-tim.com/bootstrap-themes/ui-kit?direction=asc&sort=price">Creative Tim</a></th>
                             <td>Web Templates</td>
                           </tr>
+                          <tr>
+                            <th scope="row"><a href="https://github.com/zero-to-mastery/Coding_Challenge-8">Code Challenges</a></th>
+                            <td>Web Inspiration List</td>
+                          </tr>
                         </tbody>
                     </table>
                 </div>
