--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   </tr>
                   <tr>
                     <th scope="row">
-                      <a href="https://specificity.keegan.st/">specificity Calculator</a>
+                      <a href="https://specificity.keegan.st/">Specificity Calculator</a>
                     </th>
                     <td>A visual way to understand CSS specificity.</td>
                   </tr>
