--- a/index.html
+++ b/index.html
@@ -176,7 +176,23 @@
               </table>
             </div>
             <div class="tab-pane fade" id="list-javascript" role="tabpanel" aria-labelledby="list-javascript-list">
-              ...
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Page</th>
+                    <th scope="col">Description</th>
+                  </tr>
+                </thead>
+                
+                <tbody>
+                  <tr>
+                    <th scope="row">
+                      <a href="https://www.w3schools.com/js/js_htmldom.asp">Javascript - DOM</a>
+                    </th>
+                    <td>JavaScript HTML DOM</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <div class="tab-pane fade" id="list-resources" role="tabpanel" aria-labelledby="list-resources-list">
               <table class="table table-hover">
