--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
                     </th>
                     <td>JavaScript HTML DOM</td>
                   </tr>
+                  <tr>
+                    <th scope="row">
+                      <a href="https://developer.mozilla.org/en-US/docs/Web/Events">Javascript - event</a>
+                    </th>
+                    <td>Event reference</td>
+                  </tr>
                 </tbody>
               </table>
             </div>
